cleaning gradle build config